# RenouvelAssur

./: README.md  pyproject.toml  requirements.txt  vercel.json
config/: settings.py  urls.py
renewals/: admin.py  apps.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
renewals/management/commands/: ensure_admin.py  seed_demo.py
renewals/migrations/: 0001_initial.py  0002_importpreview.py  0003_remove_pdf_preview_and_update_call_label.py  0004_contract_brand.py
static/css/: app.css  call-results.css
templates/: base.html
templates/registration/: login.html
templates/renewals/: call_checklist.html  client_detail.html  client_list.html  contract_confirm_delete.html  contract_detail.html  contract_list.html  contract_table.html  dashboard.html  import.html  import_report.html  pagination.html  terminated_list.html
